# MVC-Cloning-and-QEM-Mesh-Simplification

./: CMakeLists.txt  MVCCloner.h  README.md  main.cpp
MVC/: CMakeLists.txt  MVCCloner.cpp  main.cpp
Mesh/: CMakeLists.txt  main.cpp
demo/MVC/img/: fruit.png~  mask_fruit_part.jpg~  mask_fruit_part.png~
